# channel

./: README.md  bash.sh
.github/ISSUE_TEMPLATE/: research-task-template.md
.github/workflows/: merge.yml
app/: Cargo.toml  Makefile.toml  README.md  index.html  tailwind.config.js
app/src/: config.rs  constant.rs  errors.rs  main.rs  routes.rs
app/src/app/components/: container.rs  mod.rs  top_bar.rs
app/src/app/pages/: mod.rs  page_not_found.rs
app/src/chat/pages/: chat_page.rs  mod.rs
app/src/chat_room/: chat_room.rs  mod.rs
app/src/chat_room/components/: chat_room.rs  chat_room_detail.rs  chat_room_list.rs  chat_room_list_card.rs  chat_room_user_card.rs  invite_user_modal.rs  mod.rs  new_chat_room_modal.rs
app/src/chat_room/functions/: get_group.rs  get_group_users.rs  get_groups_debug.rs  get_joined_groups.rs  get_owned_groups.rs  join_group.rs  mod.rs  set_group.rs
app/src/chat_room/pages/: chat_room_page.rs  lobby_page.rs  mod.rs
app/src/chat_room/types/: chat_room.rs  get_group_input.rs  get_group_user_input.rs  get_owned_group_input.rs  group_output.rs  join_group_input.rs  mod.rs  set_group_input.rs
app/src/chatroom/: chatroom.rs  mod.rs
app/src/chatroom/components/: chatroom_detail.rs  chatroom_list.rs  chatroom_list_card.rs  chatroom_user_card.rs  mod.rs  new_chatroom_modal.rs
app/src/chatroom/functions/: get_groups_debug.rs  mod.rs  set_group.rs
app/src/chatroom/types/: chatroom.rs  group.rs  mod.rs  set_group_input.rs
app/src/components/: icon.rs
app/src/home/pages/: home_page.rs  mod.rs
app/src/home/pages/components/: header.rs
app/src/mic_check/pages/: mic_check_page.rs  mod.rs
app/src/recorder/: capabilities.rs  error.rs  helpers.rs  meter.rs  mod.rs  recorder.rs
app/src/rtc/pages/: mod.rs  rtc_test_page.rs
app/src/temp/components/: mod.rs  temp_create_form.rs
app/src/user/: mod.rs  user.rs
app/src/user/components/: create_user_button.rs  mod.rs  user_state_checker.rs
app/src/user/functions/: create_user.rs  get_user.rs  get_user_info.rs  mod.rs  set_user.rs
app/src/user/pages/: mod.rs  profile_page.rs
app/src/user/types/: get_user_info_input.rs  get_user_input.rs  mod.rs  new_user_input.rs  set_user_input.rs  user_info_output.rs  user_output.rs
app/src/wallet/: mod.rs  utils.rs  wallet.rs
app/src/wallet/components/: connect_button.rs  mod.rs  near_connect_button.rs
contracts/channel/: README.md  (+4 more)
docker-dev-env/: Dockerfile  build
protocol/: Cargo.toml  Makefile.toml
signal-protocol/: Cargo.toml
signalling-server/: .gitignore  Cargo.toml  Makefile.toml  README.md
signalling-server/src/: main.rs  participant_handler.rs  signal_handler.rs  types.rs  user_handler.rs
template/: Makefile.toml  README.md
webrtc/: Cargo.toml  Makefile.toml
webrtc/src/: client.rs  dom.rs  errors.rs  ice.rs  lib.rs  local_participant.rs  media.rs  participant.rs  peer.rs  publisher.rs  room.rs  sdp.rs  session.rs  signal_event.rs  signaling.rs  signalling.rs  user.rs
webrtc/src/types/: device_supported_capabilities.rs  ice_candidate.rs  mod.rs  session_state.rs
(+19 files in other folders)
