[package]
name = "app"
version = "0.1.0"
edition = "2021"


[dependencies]
dioxus = { version = "0.2.4", features = ["web", "router", "fermi"] }
serde = "1"
serde_json = "1"
serde_derive = "1"
web3-anywhere = { git = "https://github.com/russellwmy/web3-anywhere.git" }
thiserror = "1.0.37"
js-sys = "0.3.60"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
web-sys = { version = "0.3.60", features = [
    "AudioContext",
    "AnalyserNode",
    "ScriptProcessorNode",
    "AudioDestinationNode",
    "MediaStream",
    "MediaStreamAudioSourceNode",
    "Window",
    "Navigator",
    "MediaDevices",
    "MediaStreamConstraints",
    "MediaTrackSupportedConstraints",
    "MediaStreamTrack",
    "HtmlAudioElement",
] }
wasm-logger = "0.2.0"
log = "0.4.17"
