[package]
name = "signalling-server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = "1.12.0"
async-tungstenite = "0.17.2"
futures = "0.3.24"
log = "0.4.17"
rand = "0.8.5"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
signal-protocol = {path = "../signal-protocol"}
simplelog = "0.12.0"
