[package]
name = "signalling-server"
version = "0.1.0"
edition = "2021"

[dependencies]
protocol = {path = "../protocol"}

futures-util = "0.3.25"
log = "0.4"
pretty_env_logger = "0.4.0"
serde_json = "1.0.87"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
tokio-stream = "0.1.11"

[dependencies.uuid]
version = "1.2.1"
features = ["v4", "fast-rng"]
